<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_extrabold"
        android:text="@string/title_water_quality_controlling"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="2"
        android:shadowColor="@color/grey"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_tambakudang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/tambak_udang"
        android:textColor="@color/white"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="2"
        android:shadowColor="@color/grey"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/place"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/tv_tambakudang"
        app:layout_constraintTop_toBottomOf="@+id/tv_tambakudang" />

    <ImageView
        android:id="@+id/icon_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:src="@drawable/baseline_location_on_24"
        app:layout_constraintBottom_toBottomOf="@+id/tv_place"
        app:layout_constraintStart_toEndOf="@+id/tv_place"
        app:layout_constraintTop_toTopOf="@+id/tv_place" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inter_semibold"
        android:text="-"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/tv_place"
        app:layout_constraintTop_toBottomOf="@+id/tv_place" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="@color/semiTransparentColor"
        app:cardCornerRadius="12dp"
        app:cardElevation="5dp"
        app:layout_constraintStart_toStartOf="@+id/btn_livemonitoring"
        app:layout_constraintTop_toBottomOf="@+id/tv_date">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@color/semiTransparentColor"
            android:padding="15dp">

            <ImageView
                android:id="@+id/img_icon_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/vector_temp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/temp"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/img_icon_temp"
                app:layout_constraintStart_toStartOf="@+id/img_icon_temp"
                app:layout_constraintTop_toBottomOf="@+id/img_icon_temp" />

            <TextView
                android:id="@+id/tv_datatemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/inter_medium"
                android:text="30 \u2103"
                android:textColor="@color/grey"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_temp"
                app:layout_constraintStart_toStartOf="@+id/tv_temp"
                app:layout_constraintTop_toBottomOf="@+id/tv_temp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_ph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/semiTransparentColor"
        app:cardCornerRadius="12dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_controller"
        app:layout_constraintTop_toTopOf="@+id/cv_temp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@color/semiTransparentColor"
            android:padding="15dp">

            <ImageView
                android:id="@+id/img_icon_ph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/vector_ph"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_ph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/ph"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/img_icon_ph"
                app:layout_constraintStart_toStartOf="@+id/img_icon_ph"
                app:layout_constraintTop_toBottomOf="@+id/img_icon_ph" />

            <TextView
                android:id="@+id/tv_dataph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/inter_medium"
                android:text="7,8"
                android:textColor="@color/grey"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_ph"
                app:layout_constraintStart_toStartOf="@+id/tv_ph"
                app:layout_constraintTop_toBottomOf="@+id/tv_ph" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_oxigen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="@color/semiTransparentColor"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        app:layout_constraintStart_toStartOf="@+id/cv_temp"
        app:layout_constraintTop_toBottomOf="@+id/cv_temp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@color/semiTransparentColor"
            android:padding="15dp">

            <ImageView
                android:id="@+id/img_icon_oxigen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/vector_oxigen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_oxigen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/oxigen"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/img_icon_oxigen"
                app:layout_constraintStart_toStartOf="@+id/img_icon_oxigen"
                app:layout_constraintTop_toBottomOf="@+id/img_icon_oxigen" />

            <TextView
                android:id="@+id/tv_dataoxigen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/inter_medium"
                android:text="10 mg/s"
                android:textColor="@color/grey"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_oxigen"
                app:layout_constraintStart_toStartOf="@+id/tv_oxigen"
                app:layout_constraintTop_toBottomOf="@+id/tv_oxigen" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_tdm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/semiTransparentColor"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="@+id/cv_ph"
        app:layout_constraintTop_toTopOf="@+id/cv_oxigen">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@color/semiTransparentColor"
            android:padding="15dp">

            <ImageView
                android:id="@+id/img_icon_tds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/vector_tds"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_tds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/tds"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/img_icon_tds"
                app:layout_constraintStart_toStartOf="@+id/img_icon_tds"
                app:layout_constraintTop_toBottomOf="@+id/img_icon_tds" />

            <TextView
                android:id="@+id/tv_datatds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/inter_medium"
                android:text="335 ppm"
                android:textColor="@color/grey"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_tds"
                app:layout_constraintStart_toStartOf="@+id/tv_tds"
                app:layout_constraintTop_toBottomOf="@+id/tv_tds" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_salinity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/semiTransparentColor"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_livemonitoring"
        app:layout_constraintStart_toStartOf="@+id/cv_temp"
        app:layout_constraintTop_toBottomOf="@+id/cv_oxigen"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@color/semiTransparentColor"
            android:padding="15dp">

            <ImageView
                android:id="@+id/img_icon_salinity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/vector_salinity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_salinity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/salinity"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/img_icon_salinity"
                app:layout_constraintStart_toStartOf="@+id/img_icon_salinity"
                app:layout_constraintTop_toBottomOf="@+id/img_icon_salinity" />

            <TextView
                android:id="@+id/tv_datasalinity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/inter_medium"
                android:text="34,5 ppt"
                android:textColor="@color/grey"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_salinity"
                app:layout_constraintStart_toStartOf="@+id/tv_salinity"
                app:layout_constraintTop_toBottomOf="@+id/tv_salinity" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_amonia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/semiTransparentColor"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_controller"
        app:layout_constraintEnd_toEndOf="@+id/cv_tdm"
        app:layout_constraintTop_toBottomOf="@+id/cv_tdm"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:background="@color/semiTransparentColor"
            android:padding="15dp">

            <ImageView
                android:id="@+id/img_icon_amonia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/vector_amonia"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_amonia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/amonia"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/img_icon_amonia"
                app:layout_constraintStart_toStartOf="@+id/img_icon_amonia"
                app:layout_constraintTop_toBottomOf="@+id/img_icon_amonia" />

            <TextView
                android:id="@+id/tv_dataamonia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/inter_medium"
                android:text="0,04 mg/L"
                android:textColor="@color/grey"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_amonia"
                app:layout_constraintStart_toStartOf="@+id/tv_amonia"
                app:layout_constraintTop_toBottomOf="@+id/tv_amonia" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_controller"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/grey"
        android:fontFamily="@font/inter_bold"
        android:text="@string/button_controller"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_livemonitoring" />

    <Button
        android:id="@+id/btn_livemonitoring"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/white"
        android:enabled="false"
        android:fontFamily="@font/inter_bold"
        android:text="@string/button_live_monitoring"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>